--- a/templates/home.templ
+++ b/templates/home.templ
@@ -1,13 +1,13 @@
 package templates
 
 templ Home() {
-    <main style="display:flex; flex-direction:column; align-items:center;">
-        <h1>Enter your name</h1>
-        <div style="width:fit;">
-            <input type="text" style="padding:1rem; margin:0.5rem; font-size:1.25rem;" id="name" placeholder="Name" />
-            <div id="go" onclick="start()" tabindex="0" style="user-select:none; cursor:pointer; display:flex; flex-direction:column; justify-content:center; text-align:center; font-size:2rem; margin:0.5rem; border-radius:0.5rem; background-color:palegreen;">→</div>
-        </div>
-        <script>
+	<main class="flex flex-col items-center">
+		<h1>Enter your name</h1>
+		<div class="w-fit">
+			<input type="text" class="p-4 m-2 border-2 border-black rounded-lg" id="name" placeholder="Name"/>
+			<div id="go" onclick="start()" tabindex="0" class="bg-green-300 flex flex-col justify-center text-center text-4xl m-2 select-none cursor-pointer rounded-lg">→</div>
+		</div>
+		<script>
             function start() {
                 var name = document.getElementById('name').value;
                 if (name) {
@@ -15,5 +15,5 @@ templ Home() {
                 }
             }
         </script>
-    </main>
+	</main>
 }
