--- a/templates/host.templ
+++ b/templates/host.templ
@@ -1,8 +1,8 @@
 package templates
 
 templ Host() {
-    <main style="width:100%; display:flex; justify-content:space-around;">
-        @BuzzedIn()
-        @Leaderboard()
-    </main>
+	<main class="w-full flex justify-around">
+		@BuzzedIn()
+		@Leaderboard()
+	</main>
 }
