--- a/templates/leaderboard.templ
+++ b/templates/leaderboard.templ
@@ -1,21 +1,20 @@
 package templates
 
 templ Leaderboard() {
-    <div style="display:flex; flex-direction:column; align-items:center;">
-        <h1>Leaderboard</h1>
-        <table style="display:table; table-layout:auto; border-collapse:collapse;">
-            <thead style="display:table-header-group;">
-                <tr style="display:table-row;">
-                    <th style="display:table-cell; padding:0.5rem; border-style:solid; border-width:2px;">Rank</th>
-                    <th style="display:table-cell; padding:0.5rem; border-style:solid; border-width:2px;">Name</th>
-                    <th style="display:table-cell; padding:0.5rem; border-style:solid; border-width:2px;">Score</th>
-                </tr>
-            </thead>
-            <tbody id="leaderboard-data" style="display:table-row-group;">
-            </tbody>
-        </table>
-    </div>
-    <script>
+	<div class="flex flex-col items-center">
+		<h1>Leaderboard</h1>
+		<table class="border-collapse">
+			<thead>
+				<tr>
+					<th class="p-2 border-solid border-2">Rank</th>
+					<th class="p-2 border-solid border-2">Name</th>
+					<th class="p-2 border-solid border-2">Score</th>
+				</tr>
+			</thead>
+			<tbody id="leaderboard-data"></tbody>
+		</table>
+	</div>
+	<script>
         const leaderboardDestination = `${window.location.protocol === 'https:' ? 'wss:' : 'ws:'}//${window.location.host}/leaderboard-ws`;
         console.log(leaderboardDestination)
 
@@ -43,10 +42,10 @@ templ Leaderboard() {
                     const rank = index + 1;
                     const color = rank === 1 ? "#d4af37" : rank === 2 ? "#c0c0c0" : rank === 3 ? "#cd7f32" : "";
                     return (
-                        `<tr style="display:table-row;">
-                            <td style="display:table-cell; text-align:center; padding:0.5rem; color:${color};">${rank}</td>
-                            <td style="display:table-cell; text-align:center; padding:0.5rem;">${player[0]}</td>
-                            <td style="display:table-cell; text-align:center; padding:0.5rem;">${player[1]}</td>
+                        `<tr>
+                            <td class="text-center p-2" style="color: ${color};">${rank}</td>
+                            <td class="text-center p-2">${player[0]}</td>
+                            <td class="text-center p-2">${player[1]}</td>
                         </tr>`
                     )
                 }
