--- a/templates/layout.templ
+++ b/templates/layout.templ
@@ -1,27 +1,19 @@
 package templates
 
 templ head(title string) {
-    <head>
+	<head>
 		<title>{ title }</title>
 		<meta charset="UTF-8"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-        <style>
-            *:not(head):not(script):not(style):not(span) {display: block; box-sizing: border-box; margin: 0; padding: 0;}
-			*{font-family: Monaco, monospace; font-size: 1.25rem;}
-			#buzz-button:active {border-style:solid; border-color:black; transition-duration:0.1s;}
-			@media (max-width: 600px) {
-				#control-box {flex-direction:column;}
-			}
-        </style>
+		<link rel="stylesheet" href="/tailwind.css"/>
 	</head>
 }
 
-
 templ Layout(contents templ.Component, title string) {
 	@head(title)
-	<body style="display:flex; flex-direction: column; height:100vh;">
-        <header style="background-color:lightblue; padding:1rem; display:flex; justify-content:start; align-items:center; text-decoration:none;">
-			<a href="/" style="color:gray; font-size:3rem; line-height:1.75rem; text-decoration:none;">Trivia</a>
+	<body class="flex flex-col h-screen text-xl">
+		<header class="bg-sky-200 p-4 flex flex-start items-center no-underline">
+			<a href="/" class="text-neutral-500 text-5xl">Trivia</a>
 		</header>
 		@contents
 	</body>
