--- a/templates/buzzedIn.templ
+++ b/templates/buzzedIn.templ
@@ -19,10 +19,13 @@ templ BuzzedIn() {
         const audio = document.getElementById('audio');
 
         const buzzedInDestination = `${window.location.protocol === 'https:' ? 'wss:' : 'ws:'}//${window.location.host}/buzzed-ws`;
-        console.log(buzzedInDestination)
 
 	const connectBuzzedIn = () => {
 	    const buzzedInSocket = new WebSocket(buzzedInDestination);
+
+	    buzzedInSocket.onopen = (e) => {
+		console.log('buzzedInSocket connected');
+	    }
 
 	    buzzedInSocket.onmessage = function(e) {
 		updateBuzzedInData(JSON.parse(e.data));
@@ -32,6 +35,8 @@ templ BuzzedIn() {
 		setTimeout(() => {connectBuzzedIn(), 100})
 	    }
 	}
+
+	connectBuzzedIn();
 
         function updateBuzzedInData(data) {
             if (numBuzzedIn === 0 && data.length > 0) audio.play();
