--- a/templates/layout.templ
+++ b/templates/layout.templ
@@ -6,6 +6,8 @@ templ head(title string) {
 		<meta charset="UTF-8"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<link rel="stylesheet" href="/tailwind.css"/>
+		<link rel="icon" href="icon.svg" />
+		<script src="/script.js"></script>
 	</head>
 }
 
